[package]
name = "br-dup"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "bit ranger tool collection"
homepage = "https://github.com/bit-ranger/brtc"
readme = "README.md"
keywords = ["tool"]
categories = ["development-tools"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/brtc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.27"
thiserror = "1.0"
structopt = "0.3"
tokio = { version = "1.24", features = ["fs", "time", "tracing", "process", "macros", "rt", "io-util", "sync"] }
async-recursion = "1.0.4"
log = { version = "0.4.14", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ['env-filter'] }
md5 = { version = "0.7.0" }